unpackaged/main/default/objects/Option__c/fields/Antidemarreur__c.field-meta.xml
<CustomField>
    <fullName>Antidemarreur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFC-1166</description>
    <label>Antidémarreur</label>
    <type>Checkbox</type>
</CustomField>