unpackaged/main/default/objects/Option__c/fields/Bouton_alarme__c.field-meta.xml
<CustomField>
    <fullName>Bouton_alarme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFC-1166</description>
    <label>Bouton alarme</label>
    <type>Checkbox</type>
</CustomField>