unpackaged/main/default/objects/Option__c/fields/Bouton_vie_privee__c.field-meta.xml
<CustomField>
    <fullName>Bouton_vie_privee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFC-1166</description>
    <label>Bouton vie privée</label>
    <type>Checkbox</type>
</CustomField>