unpackaged/main/default/objects/Option__c/fields/Charge_utile__c.field-meta.xml
<CustomField>
    <fullName>Charge_utile__c</fullName>
    <label>+/- Kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>