unpackaged/main/default/objects/Option__c/fields/Commentaires_service_tarif_produit__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_service_tarif_produit__c</fullName>
    <label>Commentaires service tarif / produit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>