unpackaged/main/default/objects/Option__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nom_du_pack__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mono-température</fullName>
            </value>
            <value>
                <fullName>Bi-température</fullName>
            </value>
            <value>
                <fullName>Tri-température</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>