unpackaged/main/default/objects/Option__c/fields/Nom_du_pack__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_pack__c</fullName>
    <label>Nom du pack</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Télématique - Access</fullName>
            </value>
            <value>
                <fullName>Télématique - Pro</fullName>
            </value>
            <value>
                <fullName>Télématique - Evolution</fullName>
            </value>
            <value>
                <fullName>Télématique - Pack Italie</fullName>
            </value>
            <value>
                <fullName>Télématique - Pack UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>