unpackaged/main/default/objects/Option__c/fields/Non_realisable__c.field-meta.xml
<CustomField>
    <fullName>Non_realisable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFC-478</description>
    <label>Non réalisable</label>
    <type>Checkbox</type>
</CustomField>