unpackaged/main/default/objects/Option__c/fields/Option_capteurs_de_porte__c.field-meta.xml
<CustomField>
    <fullName>Option_capteurs_de_porte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option capteurs de porte</label>
    <type>Checkbox</type>
</CustomField>