unpackaged/main/default/objects/Option__c/fields/Option_retenu__c.field-meta.xml
<CustomField>
    <fullName>Option_retenu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option retenue</label>
    <type>Checkbox</type>
</CustomField>