unpackaged/main/default/objects/Option__c/fields/PAT_Option__c.field-meta.xml
<CustomField>
    <fullName>PAT_Option__c</fullName>
    <description>GFC-476</description>
    <label>PAT Option</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>