unpackaged/main/default/objects/Option__c/fields/Prix_unitaire__c.field-meta.xml
<CustomField>
    <fullName>Prix_unitaire__c</fullName>
    <label>Prix unitaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>