unpackaged/main/default/objects/Option__c/fields/Quantity_capteurs_de_porte__c.field-meta.xml
<CustomField>
    <fullName>Quantity_capteurs_de_porte__c</fullName>
    <label>Quantité capteurs de porte</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>