unpackaged/main/default/objects/Option__c/fields/Quantity_sonde_piqueuse__c.field-meta.xml
<CustomField>
    <fullName>Quantity_sonde_piqueuse__c</fullName>
    <label>Quantité sonde piqueuse</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>