unpackaged/main/default/objects/Option__c/recordTypes/Option.recordType-meta.xml
<RecordType>
    <fullName>Option</fullName>
    <active>true</active>
    <label>Option</label>
</RecordType>