unpackaged/main/default/objects/Option__c/recordTypes/Option_Telematique.recordType-meta.xml
<RecordType>
    <fullName>Option_Telematique</fullName>
    <active>true</active>
    <label>Option - Télématique</label>
</RecordType>