unpackaged/main/default/objects/Option__c/validationRules/VR04_OptionRetenu.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_OptionRetenu</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(Option_retenu__c),
Option_retenu__c = True,
 ISNULL(Devis__r.Loyer__c ) 
)</errorConditionFormula>
    <errorMessage>Veuillez sélectionner un tarif avant d’ajouter une option</errorMessage>
</ValidationRule>