unpackaged/main/default/objects/Option__c/validationRules/VR1_Options.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1_Options</fullName>
    <active>true</active>
    <description>GFC-479</description>
    <errorConditionFormula>AND
(
 Option_retenu__c = true
,
OR 
(
 Non_realisable__c = true
,
ISBLANK( Prix_unitaire__c )
)
)</errorConditionFormula>
    <errorDisplayField>Option_retenu__c</errorDisplayField>
    <errorMessage>L&#39;option retenue n&#39;est pas réalisable ou n&#39;a pas été tarifée</errorMessage>
</ValidationRule>