unpackaged/main/default/objects/Option__c/validationRules/VR_Option_PackConfiguration.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Option_PackConfiguration</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL( Nom_du_pack__c , &quot;Télématique - Evolution&quot;) 
, ISBLANK( TEXT(Configuration__c)) 

)</errorConditionFormula>
    <errorDisplayField>Configuration__c</errorDisplayField>
    <errorMessage>Veuillez renseigner le champ Configuration pour un pack de type Evolution</errorMessage>
</ValidationRule>