unpackaged/main/default/objects/Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Devis__c</columns>
    <columns>Nom_option__c</columns>
    <columns>Option_retenu__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>PAT_Option__c</columns>
    <columns>Prix_unitaire__c</columns>
    <columns>Charge_utile__c</columns>
    <columns>Non_realisable__c</columns>
    <columns>Commentaires_service_tarif_produit__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nom_option__c</field>
        <operation>contains</operation>
        <value>étag</value>
    </filters>
    <filters>
        <field>Devis__c</field>
        <operation>contains</operation>
        <value>KOCF</value>
    </filters>
    <label>Tout</label>
</ListView>